# web_veterinaria

./: .gitignore  README.md  angular.json  bd_vet.sql  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.spec.json
api_python/: Dockerfile  api.py  config.py  pyproject.toml
database/: bd_vet.sql
frontend_angular/: Dockerfile  angular.json  package-lock.json  package.json
frontend_angular/.angular/cache/21.2.3/web_veterinaria/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
frontend_angular/src/app/: app.ts
frontend_angular/src/app/components/footer/: footer.html
frontend_angular/src/app/components/navbar/: navbar.html  navbar.ts
frontend_angular/src/app/components/sidebar-user/: sidebar-user.spec.ts  sidebar-user.ts
frontend_angular/src/app/services/: get-citas.spec.ts  get-dashboard-user.spec.ts  get-dashboard-user.ts  get-mascotas.spec.ts  login-service.ts
src/: index.html
src/app/: app.html  app.routes.ts  app.spec.ts
src/app/components/footer/: footer.html
src/app/components/navbar/: navbar.ts
src/app/components/sidebar-admin/: sidebar-admin.html  sidebar-admin.ts
src/app/components/sidebar-user/: sidebar-user.html
src/app/features/landing/: landing.html  landing.ts
src/app/features/login/: login.html
src/app/pages/citas/: citas.html  citas.ts
src/app/pages/dashboard/: dashboard.html  dashboard.ts
src/app/pages/pacientes/: pacientes.html  pacientes.ts
src/app/services/: admin-servicce.spec.ts  admin-servicce.ts  get-citas.ts  get-mascotas.ts  login-service.ts  register.service.ts
(+42 files in other folders)
