[project]
name = "api-python"
version = "0.1.0"
description = ""
authors = [
    {name = "DMau1420",email = "shootingdarcklight@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pymysql (>=1.1.3,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
